# py-warp-mosh

./: README.md  pyproject.toml  vibe-work-test.txt
.github/workflows/: build-binaries.yml  deploy-web-demo.yml
docs/tasks/: warp-mosh-intensity.md
scripts/: pyinstaller_entrypoint.py
src/py_warp_mosh/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_smoke.py
web/: index.html  warp-mosh.js
